[gd_scene load_steps=3 format=3 uid="uid://pause_menu_001"]

[ext_resource type="Script" path="res://scripts/ui/pause_menu.gd" id="1_pause"]
[ext_resource type="Theme" uid="uid://game_theme_001" path="res://resources/themes/game_theme.tres" id="2_theme"]

[node name="PauseMenu" type="CanvasLayer"]
layer = 100
script = ExtResource("1_pause")

[node name="Background" type="ColorRect" parent="."]
theme = ExtResource("2_theme")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TitleLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "PAUSED"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ResumeButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Resume"

[node name="SettingsButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Settings"

[node name="ForfeitCargoButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Forfeit Cargo & Escape"

[node name="RescueButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Rescue (Teleport)"

[node name="ReloadButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Reload Save"

[node name="QuitButton" type="Button" parent="Panel/VBox"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Quit Game"
